8309660: C2: failed: XMM register should be 0-15 (UseKNLSetting and ConvF2HF)