test/hotspot/jtreg/compiler/vectorization/TestFloatConversionsVector.java
@@ -58,7 +58,14 @@ public class TestFloatConversionsVector {
         }
     }
 
-    @Run(test = {"test_float_float16"}, mode = RunMode.STANDALONE)
+    @Test
+    public void test_float_float16_strided(short[] sout, float[] finp) {
+        for (int i = 0; i < finp.length/2; i++) {
+            sout[i*2] = Float.floatToFloat16(finp[i*2]);
+        }
+    }
+
+    @Run(test = {"test_float_float16", "test_float_float16_strided"}, mode = RunMode.STANDALONE)
     public void kernel_test_float_float16() {
         finp = new float[ARRLEN];
         sout = new short[ARRLEN];
@@ -75,6 +82,15 @@ public class TestFloatConversionsVector {
         for (int i = 0; i < ARRLEN; i++) {
             Asserts.assertEquals(Float.floatToFloat16(finp[i]), sout[i]);
         }
+
+        for (int i = 0; i < ITERS; i++) {
+            test_float_float16_strided(sout, finp);
+        }
+
+        // Verifying the result
+        for (int i = 0; i < ARRLEN/2; i++) {
+            Asserts.assertEquals(Float.floatToFloat16(finp[i*2]), sout[i*2]);
+        }
     }
 
     @Test
@@ -85,7 +101,14 @@ public class TestFloatConversionsVector {
         }
     }
 
-    @Run(test = {"test_float16_float"}, mode = RunMode.STANDALONE)
+    @Test
+    public void test_float16_float_strided(float[] fout, short[] sinp) {
+        for (int i = 0; i < sinp.length/2; i++) {
+            fout[i*2] = Float.float16ToFloat(sinp[i*2]);
+        }
+    }
+
+    @Run(test = {"test_float16_float", "test_float16_float_strided"}, mode = RunMode.STANDALONE)
     public void kernel_test_float16_float() {
         sinp = new short[ARRLEN];
         fout = new float[ARRLEN];
@@ -101,6 +124,15 @@ public class TestFloatConversionsVector {
         // Verifying the result
         for (int i = 0; i < ARRLEN; i++) {
             Asserts.assertEquals(Float.float16ToFloat(sinp[i]), fout[i]);
+        }
+
+        for (int i = 0; i < ITERS; i++) {
+            test_float16_float_strided(fout, sinp);
+        }
+
+        // Verifying the result
+        for (int i = 0; i < ARRLEN/2; i++) {
+            Asserts.assertEquals(Float.float16ToFloat(sinp[i*2]), fout[i*2]);
         }
     }
 }
